--- a/app/src/main/res/layout/activity_haoyou.xml
+++ b/app/src/main/res/layout/activity_haoyou.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.example.administrator.framework.erji_activity.HaoyouActivity">
+    tools:context="com.example.administrator.myapp.HaoyouActivity">
 <Button
     android:id="@+id/bt_send"
     android:text="发动态"
