--- a/app/src/main/res/layout/activity_fragment_home.xml
+++ b/app/src/main/res/layout/activity_fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    tools:context="com.example.administrator.framework.fragment.Fragment_home">
+    tools:context="com.example.administrator.myapp.fragment.Fragment_home">
 
 
 
