--- a/app/src/main/res/layout/activity_list_newest_dongtai_item.xml
+++ b/app/src/main/res/layout/activity_list_newest_dongtai_item.xml
@@ -7,8 +7,8 @@
     <ImageView
         android:id="@+id/iv_photoImg"
         android:src="@drawable/huangguan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -35,8 +35,8 @@
         android:id="@+id/iv_dynamicImg"
         android:src="@drawable/amc"
         android:layout_alignLeft="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_toRightOf="@id/iv_photoImg"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/tv_content" />
