--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,68 +2,134 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
-    android:background="#aba6a6"
+    android:background="@drawable/loginback"
     android:layout_height="match_parent"
     tools:context="com.example.administrator.myapp.LoginActivity">
-      <LinearLayout
-          android:id="@+id/ll_aa"
-          android:layout_marginTop="80dp"
-          android:layout_marginLeft="30dp"
-          android:orientation="horizontal"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-          <TextView
-              android:text="账号："
-              android:textSize="24sp"
-              android:id="@+id/tv_zhanghao"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" />
-          <EditText
-              android:id="@+id/et_zhanghao"
 
-              android:layout_width="240dp"
-              android:layout_height="wrap_content" />
-      </LinearLayout>
+    <ImageView
+        android:id="@+id/img_denglu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/ic_launcher"/>
+    <LinearLayout
+        android:id="@+id/ll_aa"
+        android:layout_below="@+id/img_denglu"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!--<TextView-->
+        <!--android:text="账号："-->
+        <!--android:textSize="24sp"-->
+        <!--android:id="@+id/tv_zhanghao"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+        <ImageView
+            android:id="@+id/img_yonghuming"
+            android:layout_weight="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/name"/>
+        <EditText
+            android:id="@+id/et_zhanghao"
+            android:layout_weight="3"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_bb"
         android:layout_marginTop="50dp"
         android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_below="@+id/ll_aa"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_mima"
-            android:text="密码："
-            android:textSize="24sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+        <!--android:id="@+id/tv_mima"-->
+        <!--android:text="密码："-->
+        <!--android:textSize="24sp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+        <ImageView
+            android:id="@+id/img_mima"
+            android:layout_weight="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/psd"/>
 
         <EditText
             android:id="@+id/et_mima"
             android:layout_width="240dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content" />
     </LinearLayout>
-<LinearLayout
-    android:layout_marginTop="40dp"
-    android:layout_below="@+id/ll_bb"
-    android:orientation="horizontal"
-    android:layout_marginLeft="120dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <Button
-        android:id="@+id/bt_zhuce"
-        android:text="注册"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/bt_login"
-        android:text="登录"
-        android:layout_marginLeft="40dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:id="@+id/ll_denglu"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/ll_bb"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</LinearLayout>
+        <!--<View-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:layout_weight="2"/>-->
+        <!--<Button-->
+        <!--android:id="@+id/bt_zhuce"-->
+        <!--android:text="注册"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="#"-->
+        <!--android:layout_weight="1"/>-->
+        <Button
+            android:id="@+id/bt_login"
+            android:text="登录"
+            android:textSize="20dp"
+            android:background="#8dcdf2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_below="@+id/ll_denglu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="40dp">
+
+        <View
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_weight="2"/>
+        <Button
+            android:id="@+id/bt_zhuce"
+            android:text="注册"
+            android:textSize="20dp"
+            android:layout_width="wrap_content"
+            android:background="#fff"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <View
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_weight="2"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
