--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,31 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#aba6a6"
+    android:background="@drawable/loginback"
     tools:context="com.example.administrator.myapp.RegisterActivity">
+
     <LinearLayout
         android:id="@+id/ll_aa"
         android:layout_marginTop="80dp"
-        android:layout_marginLeft="60dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:text="手机号："
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:id="@+id/tv_zhanghao"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/et_zhanghao"
-
             android:layout_width="240dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_bb"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="80dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_below="@+id/ll_aa"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -35,20 +39,23 @@
         <TextView
             android:id="@+id/tv_mima"
             android:text="密码："
-            android:textSize="24sp"
+            android:textSize="20sp"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/et_mima"
             android:layout_width="240dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_dd"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="80dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_below="@+id/ll_bb"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -56,19 +63,22 @@
         <TextView
             android:id="@+id/tv_nicheng"
             android:text="昵称："
-            android:textSize="24sp"
+            android:textSize="20sp"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/et_nicheng"
             android:layout_width="240dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_ee"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_below="@+id/ll_dd"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -76,40 +86,48 @@
         <Button
             android:id="@+id/tv_yanzhengma"
             android:text="获取验证码："
-            android:textSize="24sp"
+            android:textSize="20sp"
+            android:background="#8dcdf2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/et_yanzhengma"
-
-            android:layout_width="240dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_ff"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="150dp"
         android:layout_below="@+id/ll_ee"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_weight="2"/>
         <Button
             android:id="@+id/bt_zhuce"
             android:text="注册"
-            android:textSize="24sp"
+            android:textSize="20sp"
+            android:background="#8dcdf2"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/now"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/bt_zhuce"
             android:layout_toRightOf="@+id/et_yanzhengma"
-            android:gravity="center_horizontal"
-            android:visibility="gone"
-            android:text="提示信息"
-            android:textColor="#aaaaaa" />
+            android:layout_weight="1"
+            android:visibility="invisible"
+            android:text="请输入验证码!"
+            android:textColor="#f00" />
     </LinearLayout>
 
 </RelativeLayout>
