--- a/app/src/main/res/layout/layout_alldynamic_item.xml
+++ b/app/src/main/res/layout/layout_alldynamic_item.xml
@@ -8,8 +8,8 @@
     <ImageView
         android:id="@+id/iv_photoImg1"
         android:src="@drawable/huangguan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginRight="20dp"
         android:layout_alignParentLeft="true"/>
 
