--- a/app/src/main/res/layout/layout_fragment_zuyoquan.xml
+++ b/app/src/main/res/layout/layout_fragment_zuyoquan.xml
@@ -9,23 +9,24 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#5867f1">
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
+         <View
+             android:id="@+id/struct"
+             android:layout_width="5dp"
+             android:layout_height="5dp"
+             android:background="#f00"
+             android:layout_centerInParent="true"/>
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="50dp"
-            android:layout_weight="2"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="#fff"
             android:textColor="#000"
             android:text="消息"
-            android:layout_weight="1"
-            android:id="@+id/btn_xiaoxi" />
+            android:id="@+id/btn_xiaoxi"
+            android:layout_alignRight="@+id/struct"/>
             <!--<View-->
                 <!--android:layout_width="5dp"-->
                 <!--android:layout_height="5dp"-->
@@ -36,15 +37,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="#000"
-            android:layout_weight="1"
             android:background="@drawable/buttonstyle"
-            android:text="好友" />
-            <View
-                android:layout_width="1dp"
-                android:layout_height="50dp"
-                android:layout_weight="2"/>
-
-        </LinearLayout>
+            android:text="好友"
+            android:layout_alignLeft="@+id/struct"/>
+        </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
