--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -7,10 +7,100 @@
     android:orientation="vertical"
     tools:context="com.example.administrator.myapp.AboutUsActivity">
     <com.example.administrator.myapp.widget.TitleBar
-        myapp:titleBarTitle="关于我们"
+        myapp:titleBarTitle="帮助与反馈"
+        android:id="@+id/tb_bar"
         myapp:titleBarBackground="@drawable/navigator_bar"
-        myapp:titleBarLeftImage="@drawable/ic_launcher"
+        myapp:titleBarLeftImage="@drawable/nav_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
+    <View
+        android:id="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:background="#E5E5E5"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#ffffff"
+        android:id="@+id/rl_help"
+        >
+        <TextView
+            android:id="@+id/tv_help"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="帮助"
+            android:layout_centerVertical="true"
+            android:paddingLeft="20dp" />
+
+
+        <ImageView
+            android:id="@+id/iv_help"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="6dp"
+            android:src="@drawable/iv_editinfo"
+            />
+    </RelativeLayout>
+    <View
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="#F2F2F2"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#ffffff"
+        android:id="@+id/rl_fankui"
+        >
+        <TextView
+            android:id="@+id/tv_fankui"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="反馈"
+            android:layout_centerVertical="true"
+            android:paddingLeft="20dp" />
+        <ImageView
+            android:id="@+id/iv_fankui"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="6dp"
+            android:src="@drawable/iv_editinfo"
+            />
+    </RelativeLayout>
+    <View
+        android:id="@+id/view4"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="#F2F2F2"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#ffffff"
+        android:id="@+id/rl_about"
+        >
+        <TextView
+            android:id="@+id/tv_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="关于"
+            android:layout_centerVertical="true"
+            android:paddingLeft="20dp" />
+        <ImageView
+            android:id="@+id/iv_about"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="6dp"
+            android:src="@drawable/iv_editinfo"
+            />
+    </RelativeLayout>
 </LinearLayout>
