--- a/app/src/main/res/layout/activity_all_dynamic.xml
+++ b/app/src/main/res/layout/activity_all_dynamic.xml
@@ -11,19 +11,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#5867f1">
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_userNicheng"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="用户昵称"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"/>
-            </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/img_back"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/nav_back"/>
+
+            <TextView
+                android:id="@+id/tv_userNicheng"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="用户昵称"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:layout_centerVertical="true"
+                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
 
