--- a/app/src/main/res/layout/activity_list_newest_dongtai_item.xml
+++ b/app/src/main/res/layout/activity_list_newest_dongtai_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp">
-    
+    android:layout_height="wrap_content">
+
     <ImageView
         android:id="@+id/iv_photoImg"
         android:src="@drawable/huangguan"
@@ -19,7 +18,7 @@
         android:textColor="#000"
         android:layout_toRightOf="@id/iv_photoImg"
         android:layout_alignTop="@id/iv_photoImg"
-      />
+        />
 
     <TextView
         android:id="@+id/tv_content"
@@ -35,29 +34,29 @@
         android:id="@+id/iv_dynamicImg"
         android:src="@drawable/amc"
         android:layout_alignLeft="@+id/tv_title"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_toRightOf="@id/iv_photoImg"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/tv_content" />
-    <ImageView
-        android:id="@+id/iv_dianzan"
-        android:src="@drawable/arl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/iv_dynamicImg"
-        android:layout_below="@+id/iv_dynamicImg"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="50dp"/>
-    <TextView
-        android:id="@+id/tv_dianzancount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10"
-        android:textColor="#000"
-        android:layout_toRightOf="@+id/iv_dianzan"
-        android:layout_alignTop="@+id/iv_dianzan"
-        android:layout_marginLeft="-50dp"/>
+    <!--<ImageView-->
+        <!--android:id="@+id/iv_dianzan"-->
+        <!--android:src="@drawable/arl"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_toRightOf="@id/iv_dynamicImg"-->
+        <!--android:layout_below="@+id/iv_dynamicImg"-->
+        <!--android:layout_marginLeft="100dp"-->
+        <!--android:layout_marginRight="50dp"/>-->
+    <!--<TextView-->
+        <!--android:id="@+id/tv_dianzancount"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="10"-->
+        <!--android:textColor="#000"-->
+        <!--android:layout_toRightOf="@+id/iv_dianzan"-->
+        <!--android:layout_alignTop="@+id/iv_dianzan"-->
+        <!--android:layout_marginLeft="-50dp"/>-->
 
 
 </RelativeLayout>
