--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="手机号："
+            android:text="手机："
             android:textSize="20sp"
             android:id="@+id/tv_zhanghao"
             android:layout_weight="1"
