--- a/app/src/main/res/layout/shoucangitemlayout.xml
+++ b/app/src/main/res/layout/shoucangitemlayout.xml
@@ -5,37 +5,55 @@
     <ImageView
         android:id="@+id/iv_photo"
         android:src="@drawable/bb"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"/>
+    <TextView
+        android:id="@+id/tv_type1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="50dp"
-        android:layout_centerVertical="true"/>
+        android:text="房间类型"
+        android:textSize="20sp"
+        android:textColor="#aa000000"
+        android:layout_below="@+id/iv_photo"/>
     <TextView
         android:id="@+id/tv_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="房间类型"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textColor="#aa000000"
-        android:layout_marginBottom="50dp"
-        android:layout_toRightOf="@id/iv_photo"
-        android:layout_alignTop="@id/iv_photo"/>
+        android:layout_below="@+id/iv_photo"
+        android:layout_toRightOf="@+id/tv_type1"/>
+    <TextView
+        android:id="@+id/tv_area1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="面积"
+        android:textSize="20sp"
+        android:layout_below="@+id/tv_type"/>
+
     <TextView
         android:id="@+id/tv_area"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="面积"
-        android:layout_marginTop="50dp"
-        android:layout_toRightOf="@id/iv_photo"
-        android:layout_alignBottom="@id/iv_photo"/>
+        android:textSize="20sp"
+        android:layout_toRightOf="@+id/tv_area1"
+        android:layout_below="@+id/tv_type"/>
+    <TextView
+        android:id="@+id/tv_zujin1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="租金"
+        android:textSize="20sp"
+        android:layout_below="@+id/tv_area"/>
     <TextView
         android:id="@+id/tv_zujin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="租金"
-        android:layout_marginTop="50dp"
-        android:layout_toRightOf="@id/tv_area"
-        android:layout_marginLeft="50dp"
-        android:layout_alignBottom="@id/iv_photo"/>/>
+        android:textSize="20sp"
+        android:layout_below="@+id/tv_area"
+        android:layout_toRightOf="@+id/tv_zujin1"/>/>
 
 </RelativeLayout>
