--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="red">#f00</color>
     <color name="text_clo">#5E5E5E</color>
     <color name="black">#000</color>
+    <color name="colorTitle">#00bbd3</color>
+    <color name="colorBackground">#f0f0f0</color>
+
 </resources>
